add resource packing & python formatting

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,8 @@ repos:
         entry: dotnet format dfs/dfs.slnf -v normal --include
         files: ^dfs/.*
         types_or: ["c#", "vb"]
+  - repo: https://github.com/psf/black
+    rev: 25.1.0
+    hooks:
+      - id: black
+        language_version: python3.13.1
