--- a/dfs/common/common.csproj
+++ b/dfs/common/common.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BouncyCastle.Cryptography" Version="2.5.1" />
     <PackageReference Include="Google.Api.CommonProtos" Version="2.16.0" />
     <PackageReference Include="Google.Protobuf" Version="3.30.0" />
     <PackageReference Include="Grpc.AspNetCore.Server" Version="2.70.0" />
