--- a/dfs/node/node.csproj
+++ b/dfs/node/node.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\common-test\common-test.csproj" />
     <ProjectReference Include="..\common\common.csproj" />
   </ItemGroup>
 
