--- a/dfs/ui/package.json
+++ b/dfs/ui/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "google-drive-ui",
+  "name": "ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -13,8 +13,11 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/jest": "^29.5.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jest": "^29.7.0",
+    "jest-editor-support": "^32.0.0-beta.1",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,4 +41,3 @@
     "vite": "^5.0.8"
   }
 }
-
