--- a/dfs/ui/tsconfig.json
+++ b/dfs/ui/tsconfig.json
@@ -27,6 +27,9 @@
     }
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [
+    { "path": "./tsconfig.node.json" },
+    { "path": "./tsconfig.app.json" }
+  ]
 }
 
