--- a/dfs/ui/tsconfig.json
+++ b/dfs/ui/tsconfig.json
@@ -28,8 +28,8 @@
   },
   "include": ["src"],
   "references": [
-    { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.app.json" }
+    //{ "path": "./tsconfig.node.json" }
+    //{ "path": "./tsconfig.app.json" }
   ]
 }
 
