--- a/dfs/ui/package.json
+++ b/dfs/ui/package.json
@@ -5,13 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx buf generate && tsc -b && vite build",
+    "build": "npx protoc --ts_out ./src/types --proto_path ../common/proto/fs ../common/proto/fs/* && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest"
   },
   "dependencies": {
-    "@bufbuild/protobuf": "^2.2.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -20,17 +19,18 @@
     "@types/jest": "^29.5.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "google-protobuf": "^3.21.4",
     "jest": "^29.7.0",
     "jest-editor-support": "^32.0.0-beta.1",
     "lucide-react": "^0.294.0",
+    "protoc-gen-ts": "^0.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@bufbuild/buf": "^1.51.0",
-    "@bufbuild/protoc-gen-es": "^2.2.5",
+    "@types/google-protobuf": "^3.15.12",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
