--- a/dfs/ui/package.json
+++ b/dfs/ui/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx protoc --ts_out ./src/types --proto_path ../common/proto/fs ../common/proto/fs/* && tsc -b && vite build",
+    "build": "npx protoc --ts_out ./src/types --proto_path ../common/proto ../common/proto/rpc/nodeservice.proto && npm run ts-nocheck && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "ts-nocheck": "python add_ts_nocheck.py ./src/types"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
@@ -30,6 +31,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@grpc/grpc-js": "^1.13.2",
     "@types/google-protobuf": "^3.15.12",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
