--- a/dfs/ui/package.json
+++ b/dfs/ui/package.json
@@ -28,7 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@grpc/grpc-js": "^1.13.2",
