--- a/dfs/ui/package.json
+++ b/dfs/ui/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
+    "protoc": "^1.1.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^6.2.6"
