--- a/dfs/node/node.csproj
+++ b/dfs/node/node.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="CefSharp.Common.NETCore" Version="135.0.170" />
     <PackageReference Include="CefSharp.WinForms.NETCore" Version="135.0.170" />
+    <PackageReference Include="Microsoft.VisualStudio.Threading" Version="17.13.61" />
   </ItemGroup>
 
   <ItemGroup>
