--- a/dfs/ui/package.json
+++ b/dfs/ui/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx protoc --ts_out ./src/types --proto_path ../common/proto ../common/proto/rpc/uiservice.proto && npm run ts-nocheck && tsc -b && vite build",
+    "build": "npx protoc -I . --ts_out ./src/types --proto_path ../common/proto ../common/proto/rpc/uiservice.proto ../common/proto/fs/filesystem.proto ../common/proto/rpc_common.proto && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
     "ts-nocheck": "python add_ts_nocheck.py ./src/types"
   },
   "dependencies": {
+    "@protobuf-ts/grpcweb-transport": "^2.9.6",
+    "@protobuf-ts/runtime": "^2.9.6",
+    "@protobuf-ts/runtime-rpc": "^2.9.6",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -20,11 +23,9 @@
     "@types/jest": "^29.5.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "google-protobuf": "^3.21.4",
     "jest": "^29.7.0",
     "jest-editor-support": "^32.0.0-beta.1",
     "lucide-react": "^0.294.0",
-    "protoc-gen-ts": "^0.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.1.0",
@@ -32,8 +33,8 @@
     "util": "^0.12.5"
   },
   "devDependencies": {
-    "@grpc/grpc-js": "^1.13.2",
-    "@types/google-protobuf": "^3.15.12",
+    "@protobuf-ts/plugin": "^2.9.6",
+    "@protobuf-ts/protoc": "^2.9.6",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -45,7 +46,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
-    "protoc": "^1.1.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^6.2.6"
