add search impl

--- a/dfs/tracker/tracker.csproj
+++ b/dfs/tracker/tracker.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IronRe2" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\common\common.csproj" />
   </ItemGroup>
 
