--- a/dfs/ui/package.json
+++ b/dfs/ui/package.json
@@ -18,8 +18,10 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@types/jest": "^29.5.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
