--- a/dfs/ui/package.json
+++ b/dfs/ui/package.json
@@ -22,12 +22,14 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@types/jest": "^29.5.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "jest": "^29.7.0",
     "jest-editor-support": "^32.0.0-beta.1",
     "lucide-react": "^0.294.0",
+    "radix-ui": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.1.0",
