--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "electron",
-  "productName": "electron",
+  "name": "dfs",
+  "productName": "dfs",
   "version": "1.0.0",
-  "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "start": "npm run fix-proto && npx electron-forge start",
+    "package": "npm run fix-proto && npx electron-forge package",
+    "make": "npm run fix-proto && npx electron-forge make",
+    "publish": "npm run fix-proto && npx electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx .",
+    "test": "jest",
+    "fix-proto": "npx protoc -I . --ts_out ./src/types --proto_path ../common/proto ../common/proto/rpc/uiservice.proto ../common/proto/fs/filesystem.proto ../common/proto/rpc_common.proto"
   },
-  "keywords": [],
-  "author": {
-    "name": "a",
-    "email": "a@a"
-  },
-  "license": "MIT",
   "devDependencies": {
     "@electron-forge/cli": "^7.8.0",
     "@electron-forge/maker-deb": "^7.8.0",
@@ -27,6 +22,8 @@
     "@electron-forge/plugin-fuses": "^7.8.0",
     "@electron-forge/plugin-webpack": "^7.8.0",
     "@electron/fuses": "^1.8.0",
+    "@protobuf-ts/plugin": "^2.9.6",
+    "@protobuf-ts/protoc": "^2.9.6",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -38,17 +35,28 @@
     "electron": "35.1.5",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
     "node-loader": "^2.1.0",
     "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.1.5",
     "style-loader": "^3.3.4",
     "tailwindcss": "^4.1.4",
     "tailwindcss-animate": "^1.0.7",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
-    "typescript": "~4.5.4"
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
+    "typescript": "^5.2.2",
+    "webpack": "^5.99.5",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
+    "@protobuf-ts/grpcweb-transport": "^2.9.6",
+    "@protobuf-ts/runtime": "^2.9.6",
+    "@protobuf-ts/runtime-rpc": "^2.9.6",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
@@ -56,10 +64,15 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@types/jest": "^29.5.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-squirrel-startup": "^1.0.1",
+    "jest": "^29.7.0",
+    "jest-editor-support": "^32.0.0-beta.1",
     "lucide-react": "^0.488.0",
+    "radix-ui": "^1.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0"
