--- a/dfs/electron/tsconfig.json
+++ b/dfs/electron/tsconfig.json
@@ -15,7 +15,11 @@
       "*": ["node_modules/*"],
       "@/*": ["./src/*"]
     },
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
 }
