--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -29,7 +29,7 @@
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "autoprefixer": "^10.4.21",
     "css-loader": "^6.11.0",
     "electron": "35.1.5",
@@ -43,7 +43,7 @@
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.5",
     "style-loader": "^3.3.4",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
@@ -64,7 +64,6 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
-    "@tailwindcss/postcss": "^4.1.4",
     "@types/jest": "^29.5.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
