remove old WinForms references

--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -10,8 +10,14 @@
     "publish": "npm run fix-proto && npx electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
     "test": "jest",
+    "publish-backend-debug": "powershell -ExecutionPolicy Bypass -File ./build_backend_debug.ps1",
+    "publish-backend-release": "powershell -ExecutionPolicy Bypass -File ./build_backend_release.ps1",
     "fix-proto": "npx protoc -I . --ts_out ./src/types --proto_path ../common/proto ../common/proto/rpc/uiservice.proto ../common/proto/fs/filesystem.proto ../common/proto/rpc_common.proto"
   },
+  "author": {
+    "name": "http500"
+  },
+  "description": "university course project",
   "devDependencies": {
     "@electron-forge/cli": "^7.8.0",
     "@electron-forge/maker-deb": "^7.8.0",
@@ -68,6 +74,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-squirrel-startup": "^1.0.1",
+    "get-port": "^7.1.0",
     "jest": "^29.7.0",
     "jest-editor-support": "^32.0.0-beta.1",
     "lucide-react": "^0.488.0",
