remove Grpc.Core

--- a/dfs/common/common.csproj
+++ b/dfs/common/common.csproj
@@ -9,8 +9,7 @@
   <ItemGroup>
     <PackageReference Include="BouncyCastle.Cryptography" Version="2.6.0-beta.114" />
     <PackageReference Include="Google.Protobuf" Version="3.30.2" />
-    <PackageReference Include="Grpc.Core" Version="2.46.6" />
-    <PackageReference Include="Grpc.Net.Client" Version="2.71.0-pre1" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.70.0" />
     <PackageReference Include="Grpc.Tools" Version="2.71.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,12 +19,9 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<Protobuf Include="proto/rpc/*.proto" ProtoRoot="proto" OutputDir=".\generated\" />
+		<Protobuf Include="proto/rpc/*.proto" ProtoRoot="proto" GrpcServices="Both" OutputDir=".\generated\" />
 		<Protobuf Include="proto/fs/*.proto" ProtoRoot="proto" GrpcServices="None" OutputDir=".\generated\" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Protobuf Include="proto\rpc_common.proto" GrpcServices="None" />
+		<Protobuf Include="proto/rpc_common.proto" ProtoRoot="proto" GrpcServices="None" OutputDir=".\generated\" />
 	</ItemGroup>
 
 </Project>
