--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "main": ".webpack/main",
   "scripts": {
-    "start": "npm run fix-proto && npx electron-forge start",
-    "package": "npm run fix-proto && npx electron-forge package",
-    "make": "npm run fix-proto && npx electron-forge make",
-    "publish": "npm run fix-proto && npx electron-forge publish",
+    "start": "npm run publish-backend-debug && npm run fix-proto && npx electron-forge start",
+    "package": "npm run publish-backend-release && npm run fix-proto && npx electron-forge package",
+    "make": "npm run publish-backend-release && npm run fix-proto && npx electron-forge make",
+    "publish": "npm run publish-backend-release && npm run fix-proto && npx electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
     "test": "jest",
     "publish-backend-debug": "powershell -ExecutionPolicy Bypass -File ./build_backend_debug.ps1",
