--- a/dfs/electron/.vscode/launch.json
+++ b/dfs/electron/.vscode/launch.json
@@ -3,7 +3,8 @@
   "compounds": [
     {
       "name": "Electron (Main + Renderer)",
-      "configurations": ["Main Process (Electron Forge)", "Electron Renderer"]
+      "configurations": ["Main Process (Electron Forge)", "Electron Renderer"],
+      "stopAll": true
     }
   ],
   "configurations": [
@@ -24,12 +25,12 @@
       "skipFiles": ["<node_internals>/**"]
     },
     {
+      "name": "Electron Renderer",
       "type": "chrome",
       "request": "attach",
-      "name": "Electron Renderer",
       "port": 9229,
       "webRoot": "${workspaceFolder}/src",
-      "timeout": 60000
+      "timeout": 30000
     }
   ]
 }
