--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -40,6 +40,7 @@
     "autoprefixer": "^10.4.21",
     "css-loader": "^6.11.0",
     "electron": "35.1.5",
+    "electron-devtools-installer": "^4.0.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
