--- a/dfs/integration-tests/integration-tests.csproj
+++ b/dfs/integration-tests/integration-tests.csproj
@@ -28,7 +28,7 @@
   <ItemGroup>
     <ProjectReference Include="..\node\node.csproj" />
     <ProjectReference Include="..\tracker\tracker.csproj" />
-    <ProjectReference Include="..\ui\ui.esproj" />
+    <ProjectReference Include="..\electron\electron.esproj" />
   </ItemGroup>
 
   <ItemGroup>
