--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,14 +26,6 @@ jobs:
         with:
           node-version: "22.x"
 
-      - uses: actions/checkout@v4
-      - name: Run UI tests
-        working-directory: ./dfs/ui
-        run: |
-          npm ci
-          npm run build --if-present
-          npm test
-
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
@@ -41,6 +33,19 @@ jobs:
 
       - name: Restore dependencies
         run: dotnet restore dfs/dfs.sln
+
+      - uses: actions/checkout@v4
+      - name: Build UI
+        working-directory: ./dfs/electron
+        run: |
+          npm ci
+          npm run make --if-present
+
+      - uses: actions/checkout@v4
+      - name: Test UI
+        working-directory: ./dfs/electron
+        run: |
+          npm run test
 
       - name: Build .NET
         run: dotnet build --no-restore dfs/dfs.sln
