--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -59,7 +59,8 @@
     "typescript": "^5.2.2",
     "webpack": "^5.99.5",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
+    "webpack-dev-server": "^5.2.1",
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "@protobuf-ts/grpcweb-transport": "^2.9.6",
@@ -77,7 +78,6 @@
     "clsx": "^2.1.1",
     "electron-squirrel-startup": "^1.0.1",
     "get-port": "^7.1.0",
-    "jest": "^29.7.0",
     "jest-editor-support": "^32.0.0-beta.1",
     "lucide-react": "^0.488.0",
     "radix-ui": "^1.2.0",
