--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -11,6 +11,7 @@
     "debug-no-build": "npx electron-forge start --inspect-electron",
     "lint": "eslint --ext .ts,.tsx .",
     "test": "jest",
+    "package-debug": "npm run publish-backend-debug && npm run fix-proto && npx electron-forge package",
     "publish-backend-debug": "powershell -ExecutionPolicy Bypass -File ./build_backend_debug.ps1",
     "publish-backend-release": "powershell -ExecutionPolicy Bypass -File ./build_backend_release.ps1",
     "fix-proto": "npx protoc -I . --ts_out ./src/types --proto_path ../common/proto ../common/proto/rpc/uiservice.proto ../common/proto/fs/filesystem.proto ../common/proto/rpc_common.proto"
@@ -59,10 +60,10 @@
     "typescript": "^5.2.2",
     "webpack": "^5.99.5",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1",
-    "jest": "^29.7.0"
+    "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
+    "jest": "^29.7.0",
     "@protobuf-ts/grpcweb-transport": "^2.9.6",
     "@protobuf-ts/runtime": "^2.9.6",
     "@protobuf-ts/runtime-rpc": "^2.9.6",
