--- a/dfs/common/common.csproj
+++ b/dfs/common/common.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="BouncyCastle.Cryptography" Version="2.6.0-beta.114" />
     <PackageReference Include="Google.Protobuf" Version="3.30.2" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.70.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.70.0" />
     <PackageReference Include="Grpc.Tools" Version="2.71.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
