remove grpc-web

--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -22,6 +22,7 @@
   },
   "description": "university course project",
   "devDependencies": {
+    "@bufbuild/buf": "^1.52.1",
     "@electron-forge/cli": "^7.8.0",
     "@electron-forge/maker-deb": "^7.8.0",
     "@electron-forge/maker-rpm": "^7.8.0",
@@ -65,7 +66,8 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
-    "@protobuf-ts/grpcweb-transport": "^2.9.6",
+    "@grpc/grpc-js": "^1.13.3",
+    "@protobuf-ts/grpc-transport": "^2.9.6",
     "@protobuf-ts/runtime": "^2.9.6",
     "@protobuf-ts/runtime-rpc": "^2.9.6",
     "@radix-ui/react-dialog": "^1.1.7",
