--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -15,9 +15,9 @@
     "package-debug": "npm run publish-backend-debug && npm run fix-proto && npx electron-forge package",
     "publish-backend-debug": "powershell -ExecutionPolicy Bypass -File ./build_backend_debug.ps1",
     "publish-backend-release": "powershell -ExecutionPolicy Bypass -File ./build_backend_release.ps1",
-    "get-descriptor": "npx buf build ../common/proto -o src/types/descriptors.json --as-file-descriptor-set --exclude-imports",
+    "get-descriptor": "npx pbjs -t json -r -o src/types/descriptors.json ./../common/proto/rpc/uiservice.proto -p ./../common/proto",
     "generate-rpc": "npx buf generate \"../common/proto\"",
-    "generate-wrapper": "",
+    "generate-wrapper": "npx ts-node utils/codegen.ts",
     "fix-proto": "npm run get-descriptor && npm run generate-rpc && npm run generate-wrapper"
   },
   "author": {
@@ -26,6 +26,7 @@
   "description": "university course project",
   "devDependencies": {
     "@bufbuild/buf": "^1.52.1",
+    "@bufbuild/protobuf": "^2.2.5",
     "@electron-forge/cli": "^7.8.0",
     "@electron-forge/maker-deb": "^7.8.0",
     "@electron-forge/maker-rpm": "^7.8.0",
@@ -57,11 +58,14 @@
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.5",
+    "protobufjs": "^7.5.0",
+    "protobufjs-cli": "^1.1.3",
     "style-loader": "^3.3.4",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
+    "ts-poet": "^6.11.0",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "^5.2.2",
     "webpack": "^5.99.5",
