change transport to pipes

--- a/dfs/node/Properties/launchSettings.json
+++ b/dfs/node/Properties/launchSettings.json
@@ -14,7 +14,7 @@
     },
     "Run with Args": {
       "commandName": "Project",
-      "commandLineArgs": "42069"
+      "commandLineArgs": "\"00000000-0000-0000-0000-000000000000\""
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json"
