--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -84,6 +84,7 @@
     "@types/jest": "^29.5.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "electron-log": "^5.3.4",
     "electron-squirrel-startup": "^1.0.1",
     "get-port": "^7.1.0",
     "jest-editor-support": "^32.0.0-beta.1",
