--- a/dfs/integration-tests/integration-tests.csproj
+++ b/dfs/integration-tests/integration-tests.csproj
@@ -26,9 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\common-test\common-test.csproj" />
     <ProjectReference Include="..\node\node.csproj" />
     <ProjectReference Include="..\tracker\tracker.csproj" />
-    <ProjectReference Include="..\electron\electron.esproj" />
   </ItemGroup>
 
   <ItemGroup>
