--- a/dfs/node/appsettings.json
+++ b/dfs/node/appsettings.json
@@ -1,10 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information",
-      "Grpc": "Debug"
+      "Default": "Warning",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Grpc": "Warning"
     }
   }
 }
