--- a/dfs/node/appsettings.json
+++ b/dfs/node/appsettings.json
@@ -1,11 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Warning",
-      "Microsoft.AspNetCore": "Warning",
-      "Grpc": "Warning"
+      "Grpc": "Debug",
+      "Grpc.Net.Client": "Debug",
+      "Grpc.Net.Client.Internal.GrpcCall": "Trace"
     }
   }
 }
