--- a/dfs/electron/package.json
+++ b/dfs/electron/package.json
@@ -38,6 +38,7 @@
     "@electron/fuses": "^1.8.0",
     "@protobuf-ts/plugin": "^2.9.6",
     "@protobuf-ts/protoc": "^2.9.6",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -62,10 +63,11 @@
     "style-loader": "^3.3.4",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.8.3",
     "webpack": "^5.99.5",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
@@ -81,7 +83,6 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
-    "@types/jest": "^29.5.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-log": "^5.3.4",
