--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=1.0
 
 # Define the source directories. In many cases, this will be the root directory or a subfolder like "src".
 # Adjust this to point to the correct source directory.
-sonar.sources=dfs
+sonar.sources=.
 
 # If you have tests, include them in the analysis.
 # For example, you can point to the "test" or "src/tests" directory.
