--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,3 +25,7 @@ sonar.sourceEncoding=UTF-8
 
 # Optional: For additional logging, enable verbose mode to help debug the analysis
 sonar.verbose=true
+sonar.scm.provider=git
+sonar.scm.disabled=false
+sonar.analysis.scope=full
+sonar.forceAnalysis=true
